Masssive commit, switching device, see log next commit (git amend)
