# service/api/commentPhoto.go
@@ -45,7 +45,7 @@ func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httpr
 		return
 
 	}
-	if !(database.ValidateId(photoId) && database.ValidateId(uid) && msg.Verify()) {
+	if !(database.ValidateId(photoId) && database.ValidateId(uid)) {
 		ctx.Logger.Errorln("Invalid data input")
 		w.Header().Set("content-type", "text/plain") //  404
 		w.WriteHeader(http.StatusNotFound)
@@ -68,6 +68,14 @@ func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httpr
 		w.WriteHeader(http.StatusNotFound)
 
 		return
+	}
+
+	if !msg.Verify() {
+		ctx.Logger.Errorln("text must have one o more characters")
+		w.Header().Set("content-type", "text/plain") //  400
+		w.WriteHeader(BadRequest.StatusCode)
+		return
+
 	}
 
 	if photo, err = rt.db.GetPhoto(photoId); err != nil {
